# myhealthvallet-f4sl2v

./: .gitignore  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  backend.yml  ios.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/api/: Dockerfile  docker-compose.yml
infrastructure/docker/web/: Dockerfile  docker-compose.yml
infrastructure/docker/workers/: Dockerfile  docker-compose.yml
infrastructure/kubernetes/apps/api/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/apps/web/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
infrastructure/kubernetes/apps/workers/: configmap.yaml  deployment.yaml
infrastructure/kubernetes/base/: kustomization.yaml  namespace.yaml
infrastructure/kubernetes/monitoring/alertmanager/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/monitoring/grafana/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/monitoring/prometheus/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/overlays/dev/: kustomization.yaml
infrastructure/kubernetes/security/: networkpolicy.yaml  podsecuritypolicy.yaml  rbac.yaml
infrastructure/terraform/: backend.tf  outputs.tf  provider.tf  variables.tf
src/android/: .gitignore  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
src/android/app/: build.gradle  proguard-rules.pro
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/backend/api/: __init__.py  main.py  routers.py  settings.py
src/backend/api/auth/: __init__.py  handlers.py  models.py  routes.py  schemas.py  services.py
src/backend/api/docs/: __init__.py  handlers.py  models.py  routes.py  schemas.py  services.py
src/backend/api/health/: __init__.py  handlers.py  models.py  routes.py  schemas.py  services.py
src/backend/api/integration/: __init__.py  handlers.py  models.py  routes.py  schemas.py  services.py
src/backend/api/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py  security.py  tracing.py
src/backend/api/notifications/: __init__.py  handlers.py  models.py  routes.py  schemas.py  services.py
src/backend/api/utils/: __init__.py  crypto.py  datetime.py  logging.py  validators.py
src/backend/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py  telemetry.py
src/backend/core/db/: __init__.py  base.py  session.py
src/backend/core/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/ml/: __init__.py
src/backend/ml/document/: __init__.py  classifier.py  extractor.py  ocr.py  preprocessor.py
src/backend/ml/health/: __init__.py  analyzer.py  predictor.py  preprocessor.py  trainer.py
src/backend/ml/models/: __init__.py  document_classifier.py  health_predictor.py
src/backend/ml/utils/: __init__.py  data.py  metrics.py  visualization.py
src/backend/services/: __init__.py
src/backend/services/auth/: __init__.py  jwt.py  oauth.py  permissions.py
src/backend/services/cache/: __init__.py  redis.py
src/backend/services/docs/: __init__.py  processor.py  storage.py
src/backend/services/health/: __init__.py  apple.py  fhir.py  google.py
src/backend/services/integration/: __init__.py  client.py  sync.py
src/backend/services/notifications/: __init__.py  email.py  push.py  sms.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_auth.py  test_docs.py  test_health.py  test_integration.py  test_notifications.py
src/backend/tests/unit/: __init__.py  test_auth.py  test_docs.py  test_health.py  test_integration.py  test_ml.py  test_notifications.py  test_utils.py
src/backend/workers/: __init__.py  celery.py
src/backend/workers/tasks/: __init__.py  docs.py  health.py  ml.py  notifications.py  sync.py
src/ios/: .gitignore  Podfile  README.md
src/ios/Configuration/: Debug.xcconfig  Release.xcconfig  Shared.xcconfig
src/ios/PHRSATHealthBridge/: AppDelegate.swift  Info.plist  PHRSATHealthBridge.entitlements  SceneDelegate.swift
src/ios/PHRSATHealthBridge.xcodeproj/: project.pbxproj
src/ios/PHRSATHealthBridgeTests/: BiometricAuthManagerTests.swift  DateUtilsTests.swift  EncryptionManagerTests.swift  HealthKitManagerTests.swift  HealthMetricTests.swift  Info.plist
src/ios/fastlane/: Appfile  Fastfile  Matchfile
src/web/: .eslintrc.ts  .gitignore  .prettierrc  README.md  babel.config.js  index.html  jest.config.ts  metro.config.js  package.json  tsconfig.json
src/web/src/: App.tsx  index.tsx
src/web/src/hooks/: useAuth.ts  (+7 more)
src/web/tests/: setup.ts
(+212 files in other folders)
