[metadata]
name = phrsat-backend
version = 1.0.0
description = Personal Health Record Store and Analysis Tool Backend Services
author = PHRSAT Development Team
license = Proprietary
python_requires = >=3.11,<3.12
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Security :: Cryptography
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests*
    proto*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
asyncio_mode = auto
markers =
    unit: marks unit tests
    integration: marks integration tests
    security: marks security-related tests
    slow: marks slow running tests
    hipaa: marks HIPAA compliance tests
addopts = 
    --cov=src
    --cov-report=xml
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=90
    --strict-markers
    -v

[coverage:run]
source = src
omit =
    */tests/*
    */migrations/*
    */proto/*
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
fail_under = 90

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    migrations,
    proto
per-file-ignores =
    __init__.py: F401
    test_*.py: S101
max-complexity = 10

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
plugins =
    pydantic.mypy
    sqlalchemy.ext.mypy.plugin

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
skip =
    migrations
    proto
known_first_party =
    api
    core
    ml
    services
    workers
    analytics
    auth
    documents
    integration
known_third_party =
    fastapi
    pydantic
    sqlalchemy
    tensorflow
    torch
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    LOCALFOLDER

[bandit]
exclude_dirs = tests,migrations,proto
skips = B101
tests = B201,B301,B403,B506,B602,B701
level = HIGH
confidence = HIGH